// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AsyncMultiSelect /> Should render provided data - disabled 1`] = `
<StateManager
  defaultInputValue=""
  defaultMenuIsOpen={false}
  defaultValue={null}
  isDisabled={true}
  isLoading={false}
  isMulti={true}
  isSearchable={true}
  onChange={[Function]}
  onInputChange={[Function]}
  options={Array []}
  styles={
    Object {
      "clearIndicator": [Function],
      "control": [Function],
      "dropdownIndicator": [Function],
      "menu": [Function],
      "menuList": [Function],
      "singleValue": [Function],
      "valueContainer": [Function],
    }
  }
  value={
    Array [
      Object {
        "label": "Ocean",
        "orgValue": "ocean",
        "value": "ocean",
      },
    ]
  }
/>
`;

exports[`<AsyncMultiSelect /> Should render provided data - required 1`] = `
<StateManager
  defaultInputValue=""
  defaultMenuIsOpen={false}
  defaultValue={null}
  isDisabled={false}
  isLoading={false}
  isMulti={true}
  isSearchable={true}
  onChange={[Function]}
  onInputChange={[Function]}
  options={Array []}
  styles={
    Object {
      "clearIndicator": [Function],
      "control": [Function],
      "dropdownIndicator": [Function],
      "menu": [Function],
      "menuList": [Function],
      "singleValue": [Function],
      "valueContainer": [Function],
    }
  }
  value={
    Array [
      Object {
        "label": "Ocean",
        "orgValue": "ocean",
        "value": "ocean",
      },
    ]
  }
/>
`;

exports[`<AsyncMultiSelect /> Should render provided data 1`] = `
<StateManager
  defaultInputValue=""
  defaultMenuIsOpen={false}
  defaultValue={null}
  isDisabled={false}
  isLoading={false}
  isMulti={true}
  isSearchable={true}
  onChange={[Function]}
  onInputChange={[Function]}
  options={Array []}
  styles={
    Object {
      "clearIndicator": [Function],
      "control": [Function],
      "dropdownIndicator": [Function],
      "menu": [Function],
      "menuList": [Function],
      "singleValue": [Function],
      "valueContainer": [Function],
    }
  }
  value={
    Array [
      Object {
        "label": "Ocean",
        "orgValue": "ocean",
        "value": "ocean",
      },
    ]
  }
/>
`;
